--- a/examples/tutorials/01_scenario_loading.ipynb
+++ b/examples/tutorials/01_scenario_loading.ipynb
@@ -4295,7 +4295,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gpudrive",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4309,7 +4309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
